# spread_spectrum_watermarking

./: .gitignore  Cargo.toml  LICENSE  README.md  test.py  wmark.py
examples/: main.rs
src/: algorithm.rs  dct2d.rs  lib.rs  main.rs  spread_spectrum_watermark.rs  util.rs  yiq.rs
test/: bin_test.sh  blur_test.py  complextest.py  dimensiontest.py  doublemark.py  embed_data.py  length_test.py  moretest.py  multiple.py  multiplemark.py  resize_test.py  simpletest.py  test.py
tests/: attack_crop.rs  attack_resize.rs  porcelain_cat_grey_background.txt  single_simple.rs  util.rs
watermark/: bin.py  cox.py  image.py  references.txt  simple.py  util.py
