[package]
name = "spread_spectrum_watermarking"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"


[dependencies]
image = "0.24.3"
rustdct = "0.7.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
# For the integration tests
rand_chacha = "0.3.1"

# For main
clap = {version="4.0.8", features=["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
